# screenpipe2

.github/workflows/: build-win.yaml
screenpipe-app-tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
