[package]
name = "screenpipe-app"
version = "0.44.4"
description = ""
authors = ["you"]
license = ""
repository = ""
default-run = "screenpipe-app"  # 与二进制名称一致
edition = "2021"
rust-version = "1.84"

[[bin]]
name = "screenpipe-app"  # Tauri 2.0.0 默认查找的二进制名称
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "=2.0.0", features = [] }  # 与 CLI 版本严格一致

[dependencies]
tauri = { version = "=2.0.0", features = [
  "protocol-asset",
  "macos-private-api",
  "tray-icon",
  "devtools",
  "image-png",
  "image-ico",
] }
tauri-utils = { version = "=2.0.0", features = [] }
tauri-plugin-fs = "=2.0.0"
tauri-plugin-notification = "=2.0.0"
tauri-plugin-updater = "=2.0.0"
tauri-plugin-dialog = "=2.0.0"
tauri-plugin-os = "=2.0.0"
tauri-plugin-process = "=2.0.0"
tauri-plugin-autostart = "=2.0.0"
tauri-plugin-shell = "=2.0.0"
tauri-plugin-store = "=2.0.0"
tauri-plugin-http = "=2.0.0"
tauri-plugin-deep-link = "=2.0.0"
tauri-plugin-opener = "=2.0.0"
tauri-plugin-cli = "=2.0.0"
tauri-plugin-global-shortcut = "=2.0.0"
tauri-plugin-single-instance = "=2.0.0"
tauri-plugin-sentry = "0.4.0"  # 该插件无 2.0.0 限制，保留

# 其余依赖不变...
[features]
cudart = []
metal = []
mkl = []
llm = []
cargo-clippy = []
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.cargo-machete]
ignored = ["tauri-utils"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
